# ezmsg-event

./: .gitignore  README.md  profile_rate.py  pyproject.toml  rate_profile.prof
.github/workflows/: python-tests.yml
docs/scripts_nbs/: event_rates_system_compact.py  event_rates_system_detailed.py
docs/source/: conf.py
src/ezmsg/event/: __init__.py  aggregate.py  binned.py  eventsfromrates.py  kernel.py  kernel_activation.py  kernel_insert.py  message.py  peak.py  poissonevents.py  rate.py  refractory.py  sparse.py  threshold_rate.py  window.py
src/ezmsg/event/util/: array.py  peak_mlx_metal.py  simulate.py  threshold_rate_mlx_metal.py
tests/: conftest.py  test_bin_schedule_crosspackage.py  test_binned.py  test_eventsfromrates.py  test_kernel_activation.py  test_kernel_insert.py  test_peak.py  test_poissonevents.py  test_rate.py  test_rate_comparison.py  test_refractory.py  test_sparse.py  test_threshold_rate.py  test_window.py
tests/util/: test_array.py
