[project]
name = "ezmsg-event"
description = "Namespace package for ezmsg to work with signal events like neural spikes and heartbeats"
authors = [
  { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10.15"
dynamic = ["version"]
dependencies = [
    "ezmsg-sigproc",
    "numpy>=1.26",
    "sparse>=0.15.4",
]

[dependency-groups]
dev = [
  "typer",
  {include-group = "lint"},
  {include-group = "test"},
]
lint = [
  "ruff"
]
test = [
  "pytest"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/event/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
