[project]
name = "ezmsg-event"
description = "Namespace package for ezmsg to work with signal events like neural spikes and heartbeats"
authors = [
  { name = "Chadwick Boulay", email = "chadwick.boulay@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10.15"
dynamic = ["version"]
dependencies = [
    "ezmsg-sigproc>=2.3.0",
    "ezmsg>=3.6.1",
    "sparse>=0.17.0",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
  "typer",
  {include-group = "lint"},
  {include-group = "test"},
]
lint = [
  "ruff"
]
test = [
  "pytest"
]
docs = [
  "sphinx>=7.0",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "pydata-sphinx-theme",
  "myst-parser",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ezmsg/event/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
